--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p class="lead">A mentor who guides you through the journey of NFTs</p>
             <div class="row justify-content-center mt-5">
                 <div class="col-md-3">
-                    <img src="/images/nft3.avif" class="img-fluid rounded" alt="NFT Image 1">
+                    <img src="images/nft3.avif" class="img-fluid rounded" alt="NFT Image 1">
                 </div>
                 <div class="col-md-3">
                     <img src="/Website/images/nft4.avif" class="img-fluid rounded" alt="NFT Image 2">
