--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                     <img src="images/nft3.avif" class="img-fluid rounded" alt="NFT Image 1">
                 </div>
                 <div class="col-md-3">
-                    <img src="/Website/images/nft4.avif" class="img-fluid rounded" alt="NFT Image 2">
+                    <img src="images/nft4.avif" class="img-fluid rounded" alt="NFT Image 2">
                 </div>
                 <div class="col-md-3">
-                    <img src="/Website/images/nft5.avif" class="img-fluid rounded" alt="NFT Image 3">
+                    <img src="images/nft5.avif" class="img-fluid rounded" alt="NFT Image 3">
                 </div>
                 <div class="col-md-3">
-                    <img src="/Website/images/nft6.avif" class="img-fluid rounded" alt="NFT Image 4">
+                    <img src="images/nft6.avif" class="img-fluid rounded" alt="NFT Image 4">
                 </div>
             </div>
             <a href="#about" class="btn btn-primary mt-4">Discover More</a>
